RESOLVED FIXED226120
All Netflix playback fails after r277740
https://bugs.webkit.org/show_bug.cgi?id=226120
Summary All Netflix playback fails after r277740
Eric Carlson
Reported 2021-05-21 16:16:04 PDT
All Netflix playback fails with error S7399-1260 after r277740
Attachments
Patch (1.43 KB, patch)
2021-05-21 18:35 PDT, Sam Weinig
no flags
Radar WebKit Bug Importer
Comment 1 2021-05-21 16:19:19 PDT
Sam Weinig
Comment 2 2021-05-21 18:04:55 PDT
I think I spotted the issue. Missing ! in CDMInstanceFairPlayStreamingAVFObjC.mm: auto keyIDVector = base64Decode(keyIDString); - if (keyIDVector) + if (!keyIDVector) return false; Testing a fix now.
Sam Weinig
Comment 3 2021-05-21 18:35:34 PDT
Sam Weinig
Comment 4 2021-05-21 18:36:06 PDT
Is there anyway to test this code path currently?
EWS
Comment 5 2021-05-21 19:07:24 PDT
Committed r277905 (238038@main): <https://commits.webkit.org/238038@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429382 [details].
Note You need to log in before you can comment on or make changes to this bug.