All Netflix playback fails after r277740 https://bugs.webkit.org/show_bug.cgi?id=226120 <rdar://problem/78333782>

Reviewed by Eric Carlson.

* platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:
(WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::updateLicense):
Add missing !.


Canonical link: https://commits.webkit.org/238038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277905 268f45cc-cd09-0410-ab3c-d52691b4dbfc